.happypack/s--1138451617
/Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/Operations/Editdialog/index.js: JSX attributes must only be assigned a non-empty expression (370:143)
SyntaxError: /Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/Operations/Editdialog/index.js: JSX attributes must only be assigned a non-empty expression (370:143)
[0m [90m 368 | [39m	              	[33m<[39m[33m/[39m[33mKrField[39m[33m>[39m
 [90m 369 | [39m					[33m<[39m[33mdiv[39m className[33m=[39m[32m"u-operations"[39m[33m>[39m
[31m[1m>[22m[39m[90m 370 | [39m						[33m<[39m[33mKrField[39m name[33m=[39m[32m"module"[39m  style[33m=[39m{{width[33m:[39m[35m220[39m[33m,[39mmarginLeft[33m:[39m[35m40[39m}}  component[33m=[39m[32m"select"[39m label[33m=[39m[32m"æ¨¡å—"[39m options[33m=[39m{[33mModuleList[39m} inline[33m=[39m{[36mtrue[39m} defaultValue[33m=[39m{} requireLabel[33m=[39m{[36mtrue[39m} onChange[33m=[39m{[36mthis[39m[33m.[39monSelect}[33m/[39m[33m>[39m
 [90m     | [39m						                                                                                                                                         [31m[1m^[22m[39m
 [90m 371 | [39m						{[36mthis[39m[33m.[39mrenderModule()}
 [90m 372 | [39m						{[36mthis[39m[33m.[39mrenderchildModule()}
 [90m 373 | [39m					[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[0m
    at Parser.pp$5.raise (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp$8.jsxParseAttributeValue (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6237:14)
    at Parser.pp$8.jsxParseAttribute (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6300:42)
    at Parser.pp$8.jsxParseOpeningElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6311:31)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6333:29)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6346:30)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6346:30)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6346:30)
    at Parser.pp$8.jsxParseElement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6388:15)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6400:21)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)
    at Parser.pp$3.parseMaybeConditional (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3218:19)
    at Parser.pp$3.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3181:19)
    at Parser.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5655:24)
    at Parser.pp$3.parseParenAndDistinguishExpression (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3660:26)
    at Parser.pp$3.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3545:19)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6402:22)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)